--- a/to-do-list.html
+++ b/to-do-list.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    
+    <div class="alinharBt">
     <div class="ladoTexto">
         <input id="alinharTexto" class="digitar-tarefa" type="text" placeholder="Digite sua Tarefa">
     </div>
     <div class="ladoBotao">
         <button id="alinharBotao" class="button-add">Adicionar</button>
     </div>
+</div>
     <div class="tasks-container"></div>
     <script src="https://kit.fontawesome.com/74a917ec3f.js" crossorigin="anonymous"></script>
     <script src="/to-do-list/to-do-list.js"></script>
