--- a/to-do-list.html
+++ b/to-do-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
-    <link rel="stylesheet" href="to-do-list.css">
+    <link rel="stylesheet" href="/to-do-list.css">
 </head>
 
 <body>
@@ -18,6 +18,6 @@
 </div>
     <div class="tasks-container"></div>
     <script src="https://kit.fontawesome.com/74a917ec3f.js" crossorigin="anonymous"></script>
-    <script src="/to-do-list/to-do-list.js"></script>
+    <script src="/to-do-list.js"></script>
 </body>
 </html>
